--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
   },
   "name": "rankalert",
   "version": "1.0.0",
   "scripts": {
-    "devbackend": "nodemon app.js"
+    "devbackend": "nodemon app.js",
+    "devfrontend": "cd frontend && yarn devfrontend"
   },
   "main": "app.js",
   "repository": "https://github.com/NakulPrasad/RankAlert.git",
