--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "@emailjs/browser": "^4.3.3",
+    "@types/nodemailer": "^6.4.15",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.13",
+    "typescript": "^5.4.5"
   },
   "name": "rankalert",
   "version": "1.0.0",
